--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "hangman-game",
   "version": "0.0.1",
   "engines": {
-  "node": "6.11.1",
-  "npm": "3.10.10"
+    "node": "6.11.1",
+    "npm": "3.10.10"
   },
   "scripts": {
-  "start": "node static/bin/server.js",
-  "heroku-postbuild": "cd react-ui && npm install && npm run build:production"
-   }
+    "heroku-postbuild": "cd react-ui && yarn build"
   }
+}
