--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
   "python.formatting.provider": "black",
   "python.testing.unittestEnabled": false,
   "python.testing.nosetestsEnabled": false,
-  "python.testing.pyTestEnabled": true,
+  "python.testing.pytestEnabled": true,
   "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
   "python.autoComplete.extraPaths": ["${workspaceFolder}"],
   "search.exclude": {
