--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "python.testing.unittestEnabled": false,
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": true,
-  "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
+  "python.pythonPath": ".venv/bin/python",
   "python.autoComplete.extraPaths": ["${workspaceFolder}"],
   "search.exclude": {
       "**/.idea": true,
