--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-black = "==19.3b0"
-pytest = "*"
+black = "==19.10b0"
 flake8 = "*"
 
 [packages]
@@ -15,7 +14,8 @@ flask-cors = "*"
 gunicorn = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
+pyyaml = "*"
 
 [requires]
 python_version = "3.7"
